[package]
name = "ml2pdf"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12.4", features = ["json", "blocking"] }
regex = "1.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
printpdf = "0.7.0"
kuchiki = "0.8.1"
scraper = "0.19"
url = "2.2"
uuid = { version = "1.0", features = ["v4"] }
